--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Showcase | Wisebits</title>
-    <script type="module" crossorigin src="/assets/index.c2de3959.js"></script>
-    <link rel="stylesheet" href="/assets/index.305cdcd8.css">
+    <script type="module" crossorigin src="./assets/index.100d2243.js"></script>
+    <link rel="stylesheet" href="./assets/index.a7f201e5.css">
   </head>
   <body>
     <div id="app"></div>
